--- a/app/src/main/res/layout/activity_opening_page.xml
+++ b/app/src/main/res/layout/activity_opening_page.xml
@@ -40,6 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="80dp"
             android:text="Login"
+            android:textColor="@color/white"
             android:clickable="true"/>
 
         <Button
