--- a/app/src/main/res/layout/activity_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_sign_up_page.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LogSign.SignUpPage"
-    android:background="@color/white">
+    android:background="@color/dark_blue">
 
     <LinearLayout
         app:layout_constraintTop_toTopOf="parent"
@@ -29,116 +29,120 @@
             android:src="@drawable/signupfillpic"
             android:layout_marginTop="1dp"/>
 
-        <EditText
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="20dp"
-            android:drawableStart="@drawable/baseline_person_24"
-            android:id="@+id/FirstNameFillUpSign"
-            android:textSize="16dp"
-            android:hint="Enter First Name"
-            android:textColorHint="#002D48"
-            android:textColor="@color/dark_blue"
-            android:drawablePadding="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            />
-
-        <EditText
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="20dp"
-            android:drawableStart="@drawable/baseline_person_24"
-            android:id="@+id/LastNameFillUpSign"
-            android:hint="Enter Last Name"
-            android:textSize="16dp"
-            android:textColorHint="#002D48"
-            android:textColor="@color/dark_blue"
-            android:drawablePadding="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            />
-
-        <EditText
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="20dp"
-            android:drawableStart="@drawable/baseline_email_24"
-            android:id="@+id/emailFillUpSign"
-            android:hint="Enter Email"
-            android:textSize="16dp"
-            android:textColorHint="#002D48"
-            android:textColor="@color/dark_blue"
-            android:drawablePadding="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            />
-
-        <EditText
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="20dp"
-            android:drawableStart="@drawable/baseline_lock_24"
-            android:id="@+id/passwordFillUpSign"
-            android:hint="Enter Password"
-            android:textColorHint="#002D48"
-            android:textSize="16dp"
-            android:textColor="@color/dark_blue"
-            android:drawablePadding="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            />
-
-        <Button
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:id="@+id/SelSignUpBtn"
-            android:layout_width="260dp"
-            android:layout_height="50dp"
-            android:text="Sign Up"
-            android:textFontWeight="600"
-            android:textColor="@color/white"
-            android:layout_marginTop="50dp"
-            />
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:orientation="horizontal">
+            android:layout_height="533dp"
+            android:background="@drawable/boxcontainers"
+            android:orientation="vertical"
+            android:gravity="center">
 
             <TextView
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:paddingStart="90dp"
-                android:text="Don't have an account?"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Register"
                 android:textColor="@color/dark_blue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:gravity="center"
+                android:textSize="37dp"
+                android:fontFamily="@font/interblack"/>
+
+            <EditText
+                android:id="@+id/FirstNameFillUpSign"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:drawableStart="@drawable/baseline_person_24"
+                android:drawablePadding="10dp"
+                android:hint="Enter First Name"
+                android:padding="10dp"
+                android:textColor="@color/dark_blue"
+                android:textColorHint="#002D48"
+                android:textSize="16dp" />
+
+            <EditText
+                android:id="@+id/LastNameFillUpSign"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:drawableStart="@drawable/baseline_person_24"
+                android:drawablePadding="10dp"
+                android:hint="Enter Last Name"
+                android:padding="10dp"
+                android:textColor="@color/dark_blue"
+                android:textColorHint="#002D48"
+                android:textSize="16dp" />
+
+            <EditText
+                android:id="@+id/emailFillUpSign"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:drawableStart="@drawable/baseline_email_24"
+                android:drawablePadding="10dp"
+                android:hint="Enter Email"
+                android:padding="10dp"
+                android:textColor="@color/dark_blue"
+                android:textColorHint="#002D48"
+                android:textSize="16dp" />
+
+            <EditText
+                android:id="@+id/passwordFillUpSign"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:drawableStart="@drawable/baseline_lock_24"
+                android:drawablePadding="10dp"
+                android:hint="Enter Password"
+                android:padding="10dp"
+                android:textColor="@color/dark_blue"
+                android:textColorHint="#002D48"
+                android:textSize="16dp" />
 
             <Button
-                app:layout_constraintTop_toTopOf="parent"
+                android:id="@+id/SelSignUpBtn"
+                android:layout_width="260dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="25dp"
+                android:text="Sign Up"
+                android:textColor="@color/white"
+                android:textFontWeight="600"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                android:layout_width="wrap_content"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/LoginSignUpPg"
-                android:text="Login"
-                android:textColor="@color/light_blue"
-                android:textFontWeight="600"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                />
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Don't have an account?"
+                    android:textColor="@color/dark_blue" />
+
+                <Button
+                    android:id="@+id/LoginSignUpPg"
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
+                    android:layout_width="70dp"
+                    android:layout_height="wrap_content"
+                    android:text="Login"
+                    android:textColor="@color/light_blue" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
