--- a/app/src/main/res/layout/fragment_project.xml
+++ b/app/src/main/res/layout/fragment_project.xml
@@ -3,17 +3,178 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/white"
     tools:context=".ProjectFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Projects Fragment"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="30dp"
+        android:text="Projects"
+        android:textColor="@color/dark_blue"
         android:textSize="30sp"
-        android:layout_centerInParent="true"
-        android:layout_gravity="center"
-        android:textColor="@color/dark_blue"/>
+        android:textStyle="bold" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="90dp"
+        android:layout_marginBottom="20dp"
+        android:overScrollMode="never">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="300dp"
+            android:layout_height="80dp"
+            android:background="@drawable/containerbg"
+            android:text="Project Name"
+            android:textStyle="bold"
+            android:paddingStart="12dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:textColor="@color/white"/>
+
+        <TextView
+            android:layout_width="300dp"
+            android:layout_height="80dp"
+            android:background="@drawable/containerbg"
+            android:text="Project Name"
+            android:textStyle="bold"
+            android:paddingStart="12dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:textColor="@color/white"/>
+
+        <TextView
+            android:layout_width="300dp"
+            android:layout_height="80dp"
+            android:background="@drawable/containerbg"
+            android:text="Project Name"
+            android:textStyle="bold"
+            android:paddingStart="12dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:textColor="@color/white"/>
+        <TextView
+            android:layout_width="300dp"
+            android:layout_height="80dp"
+            android:background="@drawable/containerbg"
+            android:text="Project Name"
+            android:textStyle="bold"
+            android:paddingStart="12dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:textColor="@color/white"/>
+        <TextView
+            android:layout_width="300dp"
+            android:layout_height="80dp"
+            android:background="@drawable/containerbg"
+            android:text="Project Name"
+            android:textStyle="bold"
+            android:paddingStart="12dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:textColor="@color/white"/>
+        <TextView
+            android:layout_width="300dp"
+            android:layout_height="80dp"
+            android:background="@drawable/containerbg"
+            android:text="Project Name"
+            android:textStyle="bold"
+            android:paddingStart="12dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:textColor="@color/white"/>
+        <TextView
+            android:layout_width="300dp"
+            android:layout_height="80dp"
+            android:background="@drawable/containerbg"
+            android:text="Project Name"
+            android:textStyle="bold"
+            android:paddingStart="12dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:textColor="@color/white"/>
+        <TextView
+            android:layout_width="300dp"
+            android:layout_height="80dp"
+            android:background="@drawable/containerbg"
+            android:text="Project Name"
+            android:textStyle="bold"
+            android:paddingStart="12dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:textColor="@color/white"/>
+        <TextView
+            android:layout_width="300dp"
+            android:layout_height="80dp"
+            android:background="@drawable/containerbg"
+            android:text="Project Name"
+            android:textStyle="bold"
+            android:paddingStart="12dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:textColor="@color/white"/>
+        <TextView
+            android:layout_width="300dp"
+            android:layout_height="80dp"
+            android:background="@drawable/containerbg"
+            android:text="Project Name"
+            android:textStyle="bold"
+            android:paddingStart="12dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:textColor="@color/white"/>
+        <TextView
+            android:layout_width="300dp"
+            android:layout_height="80dp"
+            android:background="@drawable/containerbg"
+            android:text="Project Name"
+            android:textStyle="bold"
+            android:paddingStart="12dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:textColor="@color/white"/>
+        <TextView
+            android:layout_width="300dp"
+            android:layout_height="80dp"
+            android:background="@drawable/containerbg"
+            android:text="Project Name"
+            android:textStyle="bold"
+            android:paddingStart="12dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:textColor="@color/white"/>
+        <TextView
+            android:layout_width="300dp"
+            android:layout_height="80dp"
+            android:background="@drawable/containerbg"
+            android:text="Project Name"
+            android:textStyle="bold"
+            android:paddingStart="12dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:textColor="@color/white"/>
+
+
+    </LinearLayout>
+    </ScrollView>
 
 </FrameLayout>
